--- a/src/app/client/shared/navbar/navbar.component.html
+++ b/src/app/client/shared/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="card">
     <p-menubar [model]="items">
       <ng-template pTemplate="start">
-        <img src="../../../../assets/Logo-blanco.svg" routerLink="/" />
+        <img src="../../../../assets/Logo_2.svg" routerLink="/" />
       </ng-template>
       <ng-template pTemplate="end">
         <span class="search material-symbols-outlined">search</span>
