--- a/src/app/client/pages/proyectos/proyectos.component.html
+++ b/src/app/client/pages/proyectos/proyectos.component.html
@@ -11,33 +11,7 @@
   </p-card>
 
     <!-- GALERIA DE IMAGENES -->
-    <div class="card proyectos__content__galeria">
-      <p-galleria #galleria [value]="proyecto.imagenes" [(activeIndex)]="activeIndex" [numVisible]="5"
-        [showThumbnails]="showThumbnails" [showItemNavigators]="true" [showItemNavigatorsOnHover]="true" [circular]="true"
-        [autoPlay]="true" [transitionInterval]="3000" [containerStyle]="{'width':'100%'}"
-        [containerClass]="galleriaClass()">
-        <ng-template pTemplate="item" let-item>
-          <img [src]="item.itemImageSrc" style="width: 100%; display: block;" />
-        </ng-template>
-        <ng-template pTemplate="thumbnail" let-item>
-          <div class="grid grid-nogutter justify-content-center">
-            <img [src]="item.thumbnailImageSrc" style="display: block;" />
-          </div>
-        </ng-template>
-
-        <ng-template pTemplate="footer" let-item>
-          <div class="custom-galleria-footer">
-              <button type="button" pButton icon="pi pi-list" (click)="onThumbnailButtonClick()"><i class="pi pi-list"></i></button>
-              <span *ngIf="proyecto.imagenes" class="title-container">
-                  <span>Imagen {{ activeIndex + 1 }} de {{ proyecto.imagenes.length }}</span>
-                  <span class="title">{{ proyecto.imagenes[activeIndex].title }}</span>
-                  <span>{{ proyecto.imagenes[activeIndex].alt }}</span>
-              </span>
-              <button type="button" pButton [ngClass]="fullScreenIcon()" (click)="toggleFullScreen()" class="fullscreen-button"></button>
-          </div>
-        </ng-template>
-      </p-galleria>
-    </div>
+    <app-galeria-imagenes [imagenes]="proyecto.imagenes" [showThumbnails]="false" [activeIndex]="0"></app-galeria-imagenes>
 
   </div>
 
