UPDATED: Todo listo para arrancar con los proyectos: NOTEBOOK

--- a/src/app/client/shared/navbar/navbar.component.scss
+++ b/src/app/client/shared/navbar/navbar.component.scss
@@ -13,14 +13,11 @@ img {
 .error-message {
   margin-left: 2rem;
   margin-top: 0.2rem;
+  color: #F2FDFE;
 }
 
 .show-error {
   color: red;
-}
-
-.search-term-found {
-  color: gray;
 }
 
 
