--- a/src/app/client/pages/servicios/servicios.component.html
+++ b/src/app/client/pages/servicios/servicios.component.html
@@ -1,8 +1,152 @@
 <h1 class="main-margen-superior">SERVICIOS</h1>
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id omnis esse tempore rem laudantium dolorem exercitationem dolore temporibus aliquid officia iusto, eaque voluptates ab nemo vero ratione maxime molestiae itaque!</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id omnis esse tempore rem laudantium dolorem exercitationem dolore temporibus aliquid officia iusto, eaque voluptates ab nemo vero ratione maxime molestiae itaque!</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id omnis esse tempore rem laudantium dolorem exercitationem dolore temporibus aliquid officia iusto, eaque voluptates ab nemo vero ratione maxime molestiae itaque!</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id omnis esse tempore rem laudantium dolorem exercitationem dolore temporibus aliquid officia iusto, eaque voluptates ab nemo vero ratione maxime molestiae itaque!</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id omnis esse tempore rem laudantium dolorem exercitationem dolore temporibus aliquid officia iusto, eaque voluptates ab nemo vero ratione maxime molestiae itaque!</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id omnis esse tempore rem laudantium dolorem exercitationem dolore temporibus aliquid officia iusto, eaque voluptates ab nemo vero ratione maxime molestiae itaque!</p>
+<div class="servicios">
+
+  <div class="servicios__content servicios__content--destacado">
+
+  <p-image class="servicios__image" src="assets/imagenes/servicios/excavaciones.jpg" alt="Image"></p-image>
+
+  <div class="servicios__info">
+    <h2 class="servicios__title"> EXCAVACIONES </h2>
+
+    <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+    <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+    <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+    <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+
+  </div>
+
+  </div>
+
+  <div class="servicios__content servicios__content--normal">
+
+    <div class="servicios__info">
+      <h2 class="servicios__title"> FUNDACIONES </h2>
+
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+        </div>
+
+    <p-image class="servicios__image" src="assets/imagenes/servicios/fundaciones.jpg" alt="Image"></p-image>
+
+  </div>
+
+  <div class="servicios__content servicios__content--destacado">
+
+    <p-image class="servicios__image" src="assets/imagenes/servicios/hormigon-armado.jpg" alt="Image"></p-image>
+
+    <div class="servicios__info">
+      <h2 class="servicios__title"> HORMIGÓN ARMADO </h2>
+
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+
+    </div>
+
+
+  </div>
+
+  <div class="servicios__content servicios__content--normal">
+
+    <div class="servicios__info">
+      <h2 class="servicios__title"> CAMINOS </h2>
+
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+
+    </div>
+
+    <p-image class="servicios__image" src="assets/imagenes/servicios/caminos.jpg" alt="Image"></p-image>
+
+  </div>
+
+  <div class="servicios__content servicios__content--destacado">
+
+    <p-image class="servicios__image" src="assets/imagenes/servicios/desagues.jpg" alt="Image"></p-image>
+
+    <div class="servicios__info">
+      <h2 class="servicios__title"> DESAGUES </h2>
+
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+
+    </div>
+
+
+  </div>
+
+  <div class="servicios__content servicios__content--normal">
+
+    <div class="servicios__info">
+      <h2 class="servicios__title"> INGENIERÍA BÁSICA Y DE DETALLE </h2>
+
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+
+    </div>
+
+    <p-image class="servicios__image" src="assets/imagenes/servicios/ingenieria-basica-detalle.jpg" alt="Image"></p-image>
+
+  </div>
+
+  <div class="servicios__content servicios__content--destacado">
+
+    <p-image class="servicios__image" src="assets/imagenes/servicios/obras-industriales.jpg" alt="Image"></p-image>
+
+    <div class="servicios__info">
+      <h2 class="servicios__title"> OBRAS INDUSTRIALES </h2>
+
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+
+    </div>
+
+
+  </div>
+
+  <div class="servicios__content servicios__content--normal">
+
+    <div class="servicios__info">
+      <h2 class="servicios__title"> OBRAS DE ARQUITECTURA </h2>
+
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+
+    </div>
+
+    <p-image class="servicios__image" src="assets/imagenes/servicios/obras-arquitectura.jpg" alt="Image"></p-image>
+
+  </div>
+
+  <div class="servicios__content servicios__content--destacado">
+
+    <p-image class="servicios__image" src="assets/imagenes/servicios/mantenimiento.jpg" alt="Image"></p-image>
+
+    <div class="servicios__info">
+      <h2 class="servicios__title"> MANTENIMIENTO </h2>
+
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+      <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
+
+    </div>
+
+
+  </div>
+
+</div>
