--- a/src/app/client/pages/servicios/servicios.component.html
+++ b/src/app/client/pages/servicios/servicios.component.html
@@ -1,12 +1,12 @@
-<h1 class="main-margen-superior">SERVICIOS</h1>
+<h1 class="main-margen-superior animate__animated animate__bounce">SERVICIOS</h1>
 
 <div class="servicios">
 
   <div class="servicios__content servicios__content--destacado">
 
-  <p-image class="servicios__image" src="assets/imagenes/servicios/excavaciones.jpg" alt="Image"></p-image>
+  <p-image class="servicios__image animate__animated animate__bounceInLeft" src="assets/imagenes/servicios/excavaciones.jpg" alt="Image"></p-image>
 
-  <div class="servicios__info">
+  <div class="servicios__info animate__animated animate__bounceInRight">
     <h2 class="servicios__title"> EXCAVACIONES </h2>
 
     <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
