UPDATED: Dejamos funcionando los servicios y agregamos unos estilos mas de animated.css: PC

--- a/src/app/client/pages/servicios/servicios.component.html
+++ b/src/app/client/pages/servicios/servicios.component.html
@@ -1,12 +1,12 @@
-<h1 class="main-margen-superior animate__animated animate__bounce">SERVICIOS</h1>
+<h1 class="main-margen-superior animate__animated animate__fadeIn">SERVICIOS</h1>
 
 <div class="servicios">
 
   <div class="servicios__content servicios__content--destacado">
 
-  <p-image class="servicios__image animate__animated animate__bounceInLeft" src="assets/imagenes/servicios/excavaciones.jpg" alt="Image"></p-image>
+  <p-image data-aos="fade-right" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/excavaciones.jpg" alt="Image"></p-image>
 
-  <div class="servicios__info animate__animated animate__bounceInRight">
+  <div data-aos="fade-left" data-aos-duration="1000" class="servicios__info">
     <h2 class="servicios__title"> EXCAVACIONES </h2>
 
     <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
@@ -20,24 +20,25 @@
 
   <div class="servicios__content servicios__content--normal">
 
-    <div class="servicios__info">
+    <div data-aos="zoom-out-right" data-aos-duration="1000" class="servicios__info" >
       <h2 class="servicios__title"> FUNDACIONES </h2>
 
       <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
       <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
       <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
       <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
-        </div>
 
-    <p-image class="servicios__image" src="assets/imagenes/servicios/fundaciones.jpg" alt="Image"></p-image>
+    </div>
+
+      <p-image data-aos="zoom-out-left" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/fundaciones.jpg" alt="Image"></p-image>
 
   </div>
 
   <div class="servicios__content servicios__content--destacado">
 
-    <p-image class="servicios__image" src="assets/imagenes/servicios/hormigon-armado.jpg" alt="Image"></p-image>
+    <p-image data-aos="zoom-in-right"  data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/hormigon-armado.jpg" alt="Image"></p-image>
 
-    <div class="servicios__info">
+    <div data-aos="zoom-in-left"  data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> HORMIGÓN ARMADO </h2>
 
       <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
@@ -50,9 +51,9 @@
 
   </div>
 
-  <div class="servicios__content servicios__content--normal">
+  <div  class="servicios__content servicios__content--normal">
 
-    <div class="servicios__info">
+    <div data-aos="zoom-in" data-aos-duration="1000">
       <h2 class="servicios__title"> CAMINOS </h2>
 
       <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
@@ -62,15 +63,17 @@
 
     </div>
 
-    <p-image class="servicios__image" src="assets/imagenes/servicios/caminos.jpg" alt="Image"></p-image>
+
+    <p-image data-aos="zoom-in" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/caminos.jpg" alt="Image"></p-image>
+
 
   </div>
 
   <div class="servicios__content servicios__content--destacado">
 
-    <p-image class="servicios__image" src="assets/imagenes/servicios/desagues.jpg" alt="Image"></p-image>
+    <p-image data-aos="zoom-in-up" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/desagues.jpg" alt="Image"></p-image>
 
-    <div class="servicios__info">
+    <div data-aos="zoom-in-up" data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> DESAGUES </h2>
 
       <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
@@ -85,7 +88,7 @@
 
   <div class="servicios__content servicios__content--normal">
 
-    <div class="servicios__info">
+    <div data-aos="flip-left" data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> INGENIERÍA BÁSICA Y DE DETALLE </h2>
 
       <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
@@ -95,15 +98,15 @@
 
     </div>
 
-    <p-image class="servicios__image" src="assets/imagenes/servicios/ingenieria-basica-detalle.jpg" alt="Image"></p-image>
+    <p-image data-aos="flip-right" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/ingenieria-basica-detalle.jpg" alt="Image"></p-image>
 
   </div>
 
   <div class="servicios__content servicios__content--destacado">
 
-    <p-image class="servicios__image" src="assets/imagenes/servicios/obras-industriales.jpg" alt="Image"></p-image>
+    <p-image data-aos="fade-up" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/obras-industriales.jpg" alt="Image"></p-image>
 
-    <div class="servicios__info">
+    <div data-aos="fade-up" data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> OBRAS INDUSTRIALES </h2>
 
       <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
@@ -118,7 +121,7 @@
 
   <div class="servicios__content servicios__content--normal">
 
-    <div class="servicios__info">
+    <div data-aos="flip-up" data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> OBRAS DE ARQUITECTURA </h2>
 
       <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
@@ -128,15 +131,15 @@
 
     </div>
 
-    <p-image class="servicios__image" src="assets/imagenes/servicios/obras-arquitectura.jpg" alt="Image"></p-image>
+    <p-image data-aos="flip-up" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/obras-arquitectura.jpg" alt="Image"></p-image>
 
   </div>
 
   <div class="servicios__content servicios__content--destacado">
 
-    <p-image class="servicios__image" src="assets/imagenes/servicios/mantenimiento.jpg" alt="Image"></p-image>
+    <p-image data-aos="fade-right" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/mantenimiento.jpg" alt="Image"></p-image>
 
-    <div class="servicios__info">
+    <div data-aos="fade-left" data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> MANTENIMIENTO </h2>
 
       <p class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> descripcion 1 </p>
