--- a/src/app/client/pages/proyectos/proyectos.component.html
+++ b/src/app/client/pages/proyectos/proyectos.component.html
@@ -1,8 +1,8 @@
-<h1 class="main-margen-superior">PROYECTOS</h1>
+<h1 class="main-margen-superior animate__animated animate__flipInX">PROYECTOS</h1>
 
 <div class="proyectos" [ngClass]="proyectosClass" *ngIf="proyectos && proyectos.length > 0" >
   <!-- Contenido específico para cada servicio -->
-<div class="proyectos__content"  *ngFor="let proyecto of proyectos">
+<div class="proyectos__content animate__animated animate__fadeIn"  *ngFor="let proyecto of proyectos">
 
   <p-card [header]="proyecto.nombre">
       <div style="margin-bottom: 0.3rem" *ngFor="let opcion of getDescripcionOpciones(proyecto.descripcion.opciones)">
