UPDATED: Ponemos el navbar fijo: PC

--- a/src/app/client/pages/contacto/contacto.component.html
+++ b/src/app/client/pages/contacto/contacto.component.html
@@ -1,1 +1,1 @@
-<h1 class="main-margen-superior animate__animated animate__zoomIn">CONTACTO</h1>
+<h1 class="main-margen-superior animate__animated animate__fadeIn">CONTACTO</h1>
