--- a/src/app/client/pages/home/home.component.html
+++ b/src/app/client/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <shared-header></shared-header>
-<h1 class="main-margen-superior">INICIO</h1>
+<h1 class="main-margen-superior animate__animated animate__fadeIn">INICIO</h1>
 
 <p style="display: flex; justify-content: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore dolorem eligendi excepturi rem eveniet molestiae impedit nemo, quae fugiat! Dolor, repellendus expedita? Cum, aperiam commodi consectetur omnis eius earum.</p>
 <p style="display: flex; justify-content: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore dolorem eligendi excepturi rem eveniet molestiae impedit nemo, quae fugiat! Dolor, repellendus expedita? Cum, aperiam commodi consectetur omnis eius earum.</p>
