--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -1,20 +1,9 @@
-<H1 class="main-margen-superior  animate__animated animate__fadeIn">NOSOTROS</H1>
+<H1 class="main-margen-superior  animate__animated animate__fadeIn"> NOSOTROS </H1>
+<div class="nosotros">
+  <div class="container nosotros__content">
+    <app-preguntas-frecuentes />
+  </div>
+</div>
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veritatis blanditiis, earum necessitatibus illo commodi fugit id aspernatur vitae tempore. Id laudantium corporis corrupti minima sint ad, exercitationem modi natus?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veritatis blanditiis, earum necessitatibus illo commodi fugit id aspernatur vitae tempore. Id laudantium corporis corrupti minima sint ad, exercitationem modi natus?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veritatis blanditiis, earum necessitatibus illo commodi fugit id aspernatur vitae tempore. Id laudantium corporis corrupti minima sint ad, exercitationem modi natus?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veritatis blanditiis, earum necessitatibus illo commodi fugit id aspernatur vitae tempore. Id laudantium corporis corrupti minima sint ad, exercitationem modi natus?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veritatis blanditiis, earum necessitatibus illo commodi fugit id aspernatur vitae tempore. Id laudantium corporis corrupti minima sint ad, exercitationem modi natus?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veritatis blanditiis, earum necessitatibus illo commodi fugit id aspernatur vitae tempore. Id laudantium corporis corrupti minima sint ad, exercitationem modi natus?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veritatis blanditiis, earum necessitatibus illo commodi fugit id aspernatur vitae tempore. Id laudantium corporis corrupti minima sint ad, exercitationem modi natus?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veritatis blanditiis, earum necessitatibus illo commodi fugit id aspernatur vitae tempore. Id laudantium corporis corrupti minima sint ad, exercitationem modi natus?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veritatis blanditiis, earum necessitatibus illo commodi fugit id aspernatur vitae tempore. Id laudantium corporis corrupti minima sint ad, exercitationem modi natus?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veritatis blanditiis, earum necessitatibus illo commodi fugit id aspernatur vitae tempore. Id laudantium corporis corrupti minima sint ad, exercitationem modi natus?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veritatis blanditiis, earum necessitatibus illo commodi fugit id aspernatur vitae tempore. Id laudantium corporis corrupti minima sint ad, exercitationem modi natus?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veritatis blanditiis, earum necessitatibus illo commodi fugit id aspernatur vitae tempore. Id laudantium corporis corrupti minima sint ad, exercitationem modi natus?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veritatis blanditiis, earum necessitatibus illo commodi fugit id aspernatur vitae tempore. Id laudantium corporis corrupti minima sint ad, exercitationem modi natus?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veritatis blanditiis, earum necessitatibus illo commodi fugit id aspernatur vitae tempore. Id laudantium corporis corrupti minima sint ad, exercitationem modi natus?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veritatis blanditiis, earum necessitatibus illo commodi fugit id aspernatur vitae tempore. Id laudantium corporis corrupti minima sint ad, exercitationem modi natus?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veritatis blanditiis, earum necessitatibus illo commodi fugit id aspernatur vitae tempore. Id laudantium corporis corrupti minima sint ad, exercitationem modi natus?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veritatis blanditiis, earum necessitatibus illo commodi fugit id aspernatur vitae tempore. Id laudantium corporis corrupti minima sint ad, exercitationem modi natus?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veritatis blanditiis, earum necessitatibus illo commodi fugit id aspernatur vitae tempore. Id laudantium corporis corrupti minima sint ad, exercitationem modi natus?</p>
+
+
