--- a/src/app/client/components/preguntas-frecuentes/preguntas-frecuentes.component.html
+++ b/src/app/client/components/preguntas-frecuentes/preguntas-frecuentes.component.html
@@ -4,22 +4,29 @@
 <div>
 
   <p-accordion [activeIndex]="0">
-      <p-accordionTab header="Header I">
+      <p-accordionTab header="¿Cuál es la historia de Basamento SRL?">
           <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Basamento SRL fue fundada en el año 2005 con la visión de proporcionar servicios de construcción de alta calidad y soluciones innovadoras para proyectos de ingeniería civil.
           </p>
       </p-accordionTab>
-      <p-accordionTab header="Header II">
+      <p-accordionTab header="¿Qué servicios ofrece Basamento SRL?">
           <p>
-              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
-              ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Consectetur, adipisci velit, sed quia non numquam eius modi.
+            Basamento SRL ofrece una amplia gama de servicios en el sector de la construcción, que incluyen diseño arquitectónico, construcción de obras civiles, mantenimiento de infraestructuras, entre otros.
           </p>
       </p-accordionTab>
-      <p-accordionTab header="Header III">
+      <p-accordionTab header="¿Cuál es el enfoque de Basamento SRL en términos de sostenibilidad y responsabilidad ambiental?">
           <p>
-              At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa
-              qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus.
+            Basamento SRL está comprometida con la sostenibilidad y la protección del medio ambiente. Nos esforzamos por utilizar materiales sostenibles, reducir residuos y minimizar el impacto ambiental de nuestros proyectos.
+          </p>
+      </p-accordionTab>
+      <p-accordionTab header="¿Qué proyectos ha realizado Basamento SRL en el pasado?">
+          <p>
+            Basamento SRL ha completado con éxito una variedad de proyectos que abarcan desde la construcción de viviendas residenciales hasta la implementación de mejoras en infraestructuras comerciales e industriales. Nuestro trabajo también se ha extendido a proyectos de renovación y mejoras en instalaciones de empresas, así como a la creación de estaciones de servicio y proyectos de desarrollo vial y de transporte. En Basamento SRL, nos enorgullecemos de nuestra versatilidad y compromiso con la excelencia en todos los proyectos que emprendemos.
+          </p>
+      </p-accordionTab>
+      <p-accordionTab header="¿Cómo puedo contactar con Basamento SRL para solicitar un presupuesto o más información?">
+          <p>
+            Puedes ponerte en contacto con Basamento SRL a través de nuestro formulario de contacto en línea, por correo electrónico o por teléfono. Estaremos encantados de atenderte y proporcionarte toda la información que necesites sobre nuestros servicios.
           </p>
       </p-accordionTab>
   </p-accordion>
