Updated: Seguimos avanzando poniendo cards en el apartado de nosotros, (porque elegirnos): PC

--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -1,9 +1,127 @@
-<H1 class="main-margen-superior  animate__animated animate__fadeIn"> NOSOTROS </H1>
 <div class="nosotros">
-  <div class="container nosotros__content">
-    <app-preguntas-frecuentes />
+  <H1 class="main-margen-superior  animate__animated animate__fadeIn"> NOSOTROS </H1>
+
+  <h2> ¿Por qué Elegirnos? </h2>
+  <hr>
+
+  <div class="nosotros__card">
+    <div>
+      <p-card header="Advanced Card" subheader="Card Subheader" [style]="{ width: '360px' }">
+        <ng-template pTemplate="header">
+          <img alt="Card" src="https://primefaces.org/cdn/primeng/images/usercard.png" />
+        </ng-template>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam
+          deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate
+          neque
+          quas!
+        </p>
+      </p-card>
+    </div>
+
+    <div>
+      <p-card header="Advanced Card" subheader="Card Subheader" [style]="{ width: '360px' }">
+        <ng-template pTemplate="header">
+          <img alt="Card" src="https://primefaces.org/cdn/primeng/images/usercard.png" />
+        </ng-template>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam
+          deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate
+          neque
+          quas!
+        </p>
+      </p-card>
+    </div>
+
+    <div>
+      <p-card header="Advanced Card" subheader="Card Subheader" [style]="{ width: '360px' }">
+        <ng-template pTemplate="header">
+          <img alt="Card" src="https://primefaces.org/cdn/primeng/images/usercard.png" />
+        </ng-template>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam
+          deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate
+          neque
+          quas!
+        </p>
+      </p-card>
+    </div>
+
   </div>
+
+  <div class="nosotros__card">
+
+    <div>
+      <p-card header="Advanced Card" subheader="Card Subheader" [style]="{ width: '360px' }">
+        <ng-template pTemplate="header">
+          <img alt="Card" src="https://primefaces.org/cdn/primeng/images/usercard.png" />
+        </ng-template>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam
+          deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate
+          neque
+          quas!
+        </p>
+      </p-card>
+    </div>
+
+    <div>
+      <p-card header="Advanced Card" subheader="Card Subheader" [style]="{ width: '360px' }">
+        <ng-template pTemplate="header">
+          <img alt="Card" src="https://primefaces.org/cdn/primeng/images/usercard.png" />
+        </ng-template>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam
+          deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate
+          neque
+          quas!
+        </p>
+      </p-card>
+    </div>
+
+  </div>
+
+
+
+
+  <div class="nosotros__content container">
+    <!-- <app-preguntas-frecuentes /> -->
+    <h2>Preguntas Frecuentes</h2>
+    <hr>
+
+<div>
+
+  <p-accordion [activeIndex]="0">
+      <p-accordionTab header="¿Cuál es la historia de Basamento SRL?">
+          <p>
+            Basamento SRL fue fundada en el año 2005 con la visión de proporcionar servicios de construcción de alta calidad y soluciones innovadoras para proyectos de ingeniería civil.
+          </p>
+      </p-accordionTab>
+      <p-accordionTab header="¿Qué servicios ofrece Basamento SRL?">
+          <p>
+            Basamento SRL ofrece una amplia gama de servicios en el sector de la construcción, que incluyen diseño arquitectónico, construcción de obras civiles, mantenimiento de infraestructuras, entre otros.
+          </p>
+      </p-accordionTab>
+      <p-accordionTab header="¿Cuál es el enfoque de Basamento SRL en términos de sostenibilidad y responsabilidad ambiental?">
+          <p>
+            Basamento SRL está comprometida con la sostenibilidad y la protección del medio ambiente. Nos esforzamos por utilizar materiales sostenibles, reducir residuos y minimizar el impacto ambiental de nuestros proyectos.
+          </p>
+      </p-accordionTab>
+      <p-accordionTab header="¿Qué proyectos ha realizado Basamento SRL en el pasado?">
+          <p>
+            Basamento SRL ha completado con éxito una variedad de proyectos que abarcan desde la construcción de viviendas residenciales hasta la implementación de mejoras en infraestructuras comerciales e industriales. Nuestro trabajo también se ha extendido a proyectos de renovación y mejoras en instalaciones de empresas, así como a la creación de estaciones de servicio y proyectos de desarrollo vial y de transporte. En Basamento SRL, nos enorgullecemos de nuestra versatilidad y compromiso con la excelencia en todos los proyectos que emprendemos.
+          </p>
+      </p-accordionTab>
+      <p-accordionTab header="¿Cómo puedo contactar con Basamento SRL para solicitar un presupuesto o más información?">
+          <p>
+            Puedes ponerte en contacto con Basamento SRL a través de nuestro formulario de contacto en línea, por correo electrónico o por teléfono. Estaremos encantados de atenderte y proporcionarte toda la información que necesites sobre nuestros servicios.
+          </p>
+      </p-accordionTab>
+  </p-accordion>
+
 </div>
+  </div>
 
-
-
+  <p-scrollTop />
+  
+</div>
