--- a/src/app/client/pages/nosotros/nosotros.component.scss
+++ b/src/app/client/pages/nosotros/nosotros.component.scss
@@ -4,25 +4,19 @@
 }
 
 .nosotros {
-  &__content{
-    h2 {
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3); /* Sombreado delicado */
-      margin-bottom: 4rem;
-      text-align: center;
-      font-size: 2rem;
-      border-radius: 5px; /* Borde redondeado */
-      position: relative; /* Posicionamiento relativo para los pseudo-elementos */
-
-      &::after {
-        content: "";
-        position: absolute; /* Posicionamiento absoluto */
-        bottom: -15px; /* Alinea el pseudo-elemento con la parte inferior del h2 */
-        left: 50%; /* Desplaza el pseudo-elemento a la mitad del h2 */
-        transform: translateX(-50%); /* Centra horizontalmente el pseudo-elemento */
-        width: 18%; /* Ancho del pseudo-elemento (mitad del ancho del h2) */
-        height: 3px; /* Grosor de la línea */
-        background-color: var(--color-secondary)
-      }
-    }
+  background-color: var(--color-background-light);
+  h2 {
+    margin-bottom: 1rem;
+    text-align: center;
+    font-size: 2rem;
+  }
+  hr {
+    width: 12rem;
+    margin-bottom: 5rem;
+  }
+  &__card {
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 10rem;
   }
 }
