Updated: Seguimos actualizando nosotros: PC

--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -6,43 +6,34 @@
 
   <div class="nosotros__card">
     <div>
-      <p-card header="Advanced Card" subheader="Card Subheader" [style]="{ width: '360px' }">
+      <p-card header="Transparencia y Confianza" subheader="Comprometidos con la Excelencia" [style]="{ width: '360px' }">
         <ng-template pTemplate="header">
-          <img alt="Card" src="https://primefaces.org/cdn/primeng/images/usercard.png" />
+          <i class="pi pi-thumbs-up"></i>
         </ng-template>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam
-          deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate
-          neque
-          quas!
+          En Basamento SRL, valoramos la transparencia y la confianza en cada interacción comercial. A continuación, te presentamos las razones por las cuales somos la elección ideal como tu socio confiable.
         </p>
       </p-card>
     </div>
 
     <div>
-      <p-card header="Advanced Card" subheader="Card Subheader" [style]="{ width: '360px' }">
+      <p-card header="Especialistas Expertos en la Materia" subheader="Maestría en Ingeniería" [style]="{ width: '360px' }">
         <ng-template pTemplate="header">
-          <img alt="Card" src="https://primefaces.org/cdn/primeng/images/usercard.png" />
+          <i class="pi pi-users"></i>
         </ng-template>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam
-          deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate
-          neque
-          quas!
+          Contamos con un grupo de profesionales altamente calificados en ingeniería y geofísica, con una amplia experiencia y dedicación para asegurar la excelencia en todos los proyectos que emprendemos.
         </p>
       </p-card>
     </div>
 
     <div>
-      <p-card header="Advanced Card" subheader="Card Subheader" [style]="{ width: '360px' }">
+      <p-card header="Historial de Éxito Demostrado" subheader="Logros Comprobados en Acción" [style]="{ width: '360px' }">
         <ng-template pTemplate="header">
-          <img alt="Card" src="https://primefaces.org/cdn/primeng/images/usercard.png" />
+          <i class="pi pi-verified"></i>
         </ng-template>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam
-          deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate
-          neque
-          quas!
+          Con más de diez años de experiencia en geofísica aplicada, hemos enfrentado proyectos desafiantes y hemos obtenido resultados excepcionales para nuestros clientes.
         </p>
       </p-card>
     </div>
@@ -52,29 +43,23 @@
   <div class="nosotros__card">
 
     <div>
-      <p-card header="Advanced Card" subheader="Card Subheader" [style]="{ width: '360px' }">
+      <p-card header="Enfoque Ecológico" subheader="Compromiso con el Medio Ambiente" [style]="{ width: '360px' }">
         <ng-template pTemplate="header">
-          <img alt="Card" src="https://primefaces.org/cdn/primeng/images/usercard.png" />
+          <i class="pi pi-sun"></i>
         </ng-template>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam
-          deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate
-          neque
-          quas!
+          Nos dedicamos a proporcionar soluciones geofísicas que reduzcan al mínimo el impacto en el medio ambiente y fomenten la sostenibilidad y resistencia en la industria de la construcción.
         </p>
       </p-card>
     </div>
 
     <div>
-      <p-card header="Advanced Card" subheader="Card Subheader" [style]="{ width: '360px' }">
+      <p-card header="Innovación Tecnológica" subheader="Vanguardia Tecnológica" [style]="{ width: '360px' }">
         <ng-template pTemplate="header">
-          <img alt="Card" src="https://primefaces.org/cdn/primeng/images/usercard.png" />
+          <i class="pi pi-globe"></i>
         </ng-template>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam
-          deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate
-          neque
-          quas!
+          Permanecemos actualizados con las últimas herramientas y tecnologías de vanguardia en la captura, procesamiento e interpretación de datos, asegurando resultados precisos y confiables en todos nuestros análisis.
         </p>
       </p-card>
     </div>
@@ -123,5 +108,5 @@
   </div>
 
   <p-scrollTop />
-  
+
 </div>
