--- a/src/app/client/pages/proyectos/proyectos.component.html
+++ b/src/app/client/pages/proyectos/proyectos.component.html
@@ -13,7 +13,10 @@
     <!-- GALERIA DE IMAGENES -->
     <app-galeria-imagenes [imagenes]="proyecto.imagenes" [showThumbnails]="false" [activeIndex]="0"></app-galeria-imagenes>
 
+
   </div>
+  
+  <p-scrollTop />
 
 </div>
 
