--- a/src/app/client/pages/nosotros/nosotros.component.scss
+++ b/src/app/client/pages/nosotros/nosotros.component.scss
@@ -14,6 +14,13 @@
     width: 12rem;
     margin-bottom: 5rem;
   }
+  i {
+    display: flex;
+    justify-content: center;
+    padding: 2rem;
+    font-size: 5rem;
+    color: var(--color-secondary);
+  }
   &__card {
     display: flex;
     justify-content: space-evenly;
